added clustering analysis

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
    "id": "b4fb1f8d-d7de-45b1-a3b4-ad8df8297f76",
    "metadata": {},
    "source": [
-    "# Spaceship Base Model"
+    "# Spaceship Titanic"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "b95848f4-8252-404f-be06-eff226f368a8",
    "metadata": {},
    "source": [
-    "## Import and concat the data"
+    "## Import the data"
    ]
   },
   {
