added new version

--- a/main.ipynb
+++ b/main.ipynb
@@ -261,7 +261,9 @@
   {
    "cell_type": "markdown",
    "id": "feff4309-304c-42e9-9219-82248e68a20a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Exploratory Data Analysis (EDA)"
    ]
@@ -2641,7 +2643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
